--- a/slides.tex
+++ b/slides.tex
@@ -84,6 +84,10 @@
 
 \section{ Introduction}
 \subsection*{}
+
+\begin{frame}{Routing in the Internet}
+\end{frame}
+
 \begin{frame}
 	\frametitle{BGP}
 \end{frame}
@@ -97,10 +101,29 @@
 	\frametitle{Importance of BGP in the Internet}
 \end{frame}
 
-\section{Security issues with BGP}
+\section{Security issues of BGP}
 \subsection*{}
 \begin{frame}
 	\frametitle{Prefix hijacking}
+		
+	\begin{block}{No verification of:}
+		\begin{itemize}
+			\item Prefix ownership
+			\item AS number ownership
+		\end{itemize}
+	\end{block}
+\end{frame}
+
+\begin{frame}{Short AS pathes}
+	\begin{center}
+		\includegraphics[width=\textwidth]{pathlength.pdf}
+	\end{center}
+\end{frame}
+
+\begin{frame}{Deaggregation}
+	\begin{center}
+		\includegraphics[width=\textwidth]{deaggregation.pdf}
+	\end{center}
 \end{frame}
 
 \begin{frame}
@@ -124,28 +147,35 @@
 	%Exploiting as path length and MED to manipulate route selection by an AS
 \end{frame}
 
+\section{Cryptographic techniques}
+\subsection*{}
+\begin{frame}{Cryptographig techniques}
+\begin{itemize}
+	\item Pairwise keying
+	\item Cryptographic hash functions
+	\item MACs
+	\item PKI
+	\item Certificates
+\end{itemize}
+\end{frame}
 
 \section{BGP security today}
 \subsection*{}
 %target: byzantine robustness
-%Currently used: Protection of the TCP connection and defensive filtering
-%
-%
-%% Just mention those techniques in 1-2 sentences each
-%%Cryptographig techniques:
-%% Pairwise keying
-%% Cryptographic hash functions
-%% MACs
-%% Diffie-Hellmann
-%% PKI
-%% Certificates
-%
+\begin{frame}
+	Current approaches: 
+	\begin{itemize}
+		\item Protection of the BGP sesseion between routers
+		\item Defensive filtering
+	\end{itemize}
+\end{frame}
+
+\section{Session defense}
 
 \begin{frame}
 	\frametitle{Protection of a BGP Session between routers}
-	%2 goals: Protecting TCP and BGP session itself
+	2 goals: Protecting TCP and BGP session itself
 \end{frame}
-
 
 
 \begin{frame}
@@ -160,10 +190,16 @@
 	\end{block}
 
 \end{frame}
+
+
+\begin{frame}{MD5 Integrity}
+	
 %MD5 integrity: Utilize TCP extension that uses a MAC based on MD5
 %-> Protects integrity and prevents replay attacks
 %
-%Session and Message Protection:
+\end{frame}
+
+\begin{frame}{Session and Message Protection}
 %5 Proposed countermeasures:
 %Adding sequence numbers
 %Encryption of all BGP data between peers (shared secret)
@@ -173,26 +209,22 @@
 %digital signatures of all UPDATE fields
 %Disadvantages: BGP needs to be altered
 %Based on shared secrets => hard to manage huge number of keypairs
-%Hop Integrity Protocols:
-%Peers can detect modification or replay attacks
-%Implemented by using sequence numbers, MACs and a PKI to refresh key
-%
-%Generalized TTL Security Mechanism
-%Utilizing IP TTL to discard every packet with TTL < MAX-1.
-%
-%=> Weakly defends against remote attacker, but not against malicious information coming from adjacent peers
-%=> Also, useless in multihop environments
-%
-%IPsec
+\end{frame}
+
+\begin{frame}{Generalized TTL Security Mechanism}
+	Utilizing IP TTL to discard every packet with TTL < MAX-1.
+	V%=> Weakly defends against remote attacker, but not against malicious information coming from adjacent peers
+	%=> Also, useless in multihop environments
+\end{frame}
+
+\begin{frame}{IPsec}
 %Use IPsec to secure BGP at IP layer
 %IKE for key management, AH and ESP for packet level security
 %Typically used to secure messages between peers
 %Provides: authenticy, integrity, replay prevention, confidentality, DOS prevention
-%
-%
-%
+\end{frame}
 
-\section{Defensive Filtering BGP anouncments}
+\section{Defensive Filtering}
 \subsection*{}
 %Goal: Filter bad and potential malicious announcmentce
 %Usually ingress and egress filtering based on route policies like:
@@ -210,32 +242,22 @@
 %
 %
 %
-%Routing Registries
-%Approach: Beeing able to have a global view on correct routes makes it easy to detect attacks
-%This could be achieved by creaint a routing registry that stores the following attributes:
-%prefix ownership
-%Connectivity between ASes
-%routing policies
-%
-%Problems:
-%Such a registry has to be accurate, complete and secure
-%Routing information sometimes intendet not to be public available
-%Full trust on registry (SPoF)
-%Information may become outdated due to lazy update policies
-%
-%
-%
-%%Securing router managment
-%% Protection against physical attacks, SNMP attacks, DoS Attacks
-%% => Basic security, won't mention
-%
-%
 %All of those described solutions are not sufficient for the protection of BGP
+%
+%
+%
+\section{S-BGP}
+\subsection*{}
+
 %
 %BGP Security Solutions
 %
-%Complete BGP Security architectures:
 %
+\begin{frame}{Route attestations}
+			\begin{center}
+				\includegraphics[scale=1.337]{sbgp.png}
+			\end{center}
+\end{frame}
 %S-BGP
 %Validates Path attributes in BGP-Update by utilizing a PKI
 %Data like adress ownership, peer AS identiy, control messages, policy attributes and path vectors can be digitally signed and verified
